fetching secrets at runtime